--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.33.0
-google-generativeai==0.3.2
-google-api-python-client==2.123.0
-python-dotenv==1.0.1
-pyrebase4==4.9.0
-python-jwt==3.3.4
-requests-toolbelt==1.0.0
-cryptography==42.0.5
+streamlit
+google-generativeai
+google-api-python-client
+python-dotenv
+pyrebase4
+python-jwt
+requests-toolbelt
+cryptography
