--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit
-google-generativeai
-google-api-python-client
 firebase-admin
-python-dotenv
+google-auth-oauthlib
+google-api-python-client
+google-generativeai
 requests
+python-dotenv
