--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit
+google-generativeai
 firebase-admin
+google-auth
 google-auth-oauthlib
 google-api-python-client
-google-generativeai
 requests
 python-dotenv
