--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ google-generativeai
 firebase-admin
 google-auth
 google-auth-oauthlib
-google-api-python-client
-requests
-python-dotenv
+google-auth-httplib2
+httpx
+pydantic
